2009-10-31  Glenn Morris  <rgm@gnu.org>

	* pcmpl-rpm.el (top-level): Move provide statement to end.
	(pcmpl-rpm): Remove unused custom group.

	* pcmpl-gnu.el (tar-parse-info, tar-header-name): Declare for compiler.

	* mail/emacsbug.el (report-emacs-bug): Request `emacs -Q' recipes.

	* emacs-lisp/bytecomp.el (byte-compile-warning-types)
	(byte-compile-warnings): Add `constants' as an option.
	(byte-compile-callargs-warn, byte-compile-arglist-warn)
	(display-call-tree): Update for byte-compile-fdefinition possibly
	returning `(macro lambda ...)'.  (Bug#4778)
	(byte-compile-variable-ref, byte-compile-setq-default):
	Respect `constants' member of byte-compile-warnings.

	* cedet/semantic/tag.el (semantic--tag-link-list-to-buffer):
	Use mapc rather than mapcar because the return value is never used.

	* cedet/srecode/template.el, cedet/semantic/wisent/javascript.el:
	* cedet/semantic/wisent/java-tags.el, cedet/semantic/texi.el:
	* cedet/semantic/html.el:
	Suppress harmless warnings about setting up semantic-imenu (not
	part of Emacs) variables.

2009-10-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el (vc-bzr-revision-keywords): New var.
	(vc-bzr-revision-completion-table): Use it to fix completion of "s:"
	to "submit:".

	* cedet/srecode/srt-mode.el (semantic-analyze-possible-completions):
	* cedet/semantic/symref/list.el (semantic-symref-rb-toggle-expand-tag):
	* cedet/semantic/symref/grep.el (semantic-symref-perform-search):
	* cedet/semantic/bovine/gcc.el (semantic-gcc-query):
	* cedet/semantic/bovine/c.el (semantic-c-parse-lexical-token):
	* cedet/semantic/analyze/debug.el (semantic-analyzer-debug-add-buttons)
	(semantic-analyzer-debug-global-symbol)
	(semantic-analyzer-debug-missing-innertype)
	(semantic-analyzer-debug-insert-include-summary):
	* cedet/semantic/util.el (semantic-file-tag-table):
	(semantic-describe-buffer-var-helper, semantic-something-to-tag-table)
	(semantic-recursive-find-nonterminal-by-name):